Remedies issue where header was being covered up my request form on request page

--- a/styles/request.css
+++ b/styles/request.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  min-height: 100vh;
   font-family: 'Maven Pro', sans-serif;
 }
 
@@ -13,25 +13,25 @@ h2 {
 
 header {
   background-color: #30a0e1;
-  height: 50%;
-  margin: auto;
+  min-height: 45vh;
+  padding: 2em;
 }
 
-.headings {
-  padding-top: 7em;
+.is-vertical-centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-main {
+form {
   max-height: 40vh;
+  position: relative;
+  top: -3em;
 }
 
 .highlight {
   color: #ff5e2b;
-}
-
-form {
-  position: relative;
-  top: -250px;
 }
 
 #submit {
